Refactored and fixed layout shift issues with cricket match cards for live/finished matches.

--- a/styles/main.css
+++ b/styles/main.css
@@ -456,14 +456,9 @@ nav li {
 }
 
 .cricket-team-info {
-    /* display: flex;
-    justify-content: space-around; */
-
-    display: grid;
-    grid-template-columns: 1fr auto 1fr;
+    display: flex;
+    justify-content: space-around;
     align-items: center;
-    justify-items: center;
-    gap: 1rem;
     margin: 1rem 0 1rem 0;
 }
 
@@ -501,37 +496,14 @@ nav li {
 
 .cricket-home-team-score-container,
 .cricket-away-team-score-container {
-    /* display: flex;
-    flex-direction: column; */
-
-    display: grid;
-    grid-template-columns: auto auto;
-    grid-auto-rows: auto;
-    column-gap: 0.5rem;
-    row-gap: 0.2rem;
+    display: flex;
+    flex-direction: column;
     font-size: 0.75rem;
     color: #777;
     line-height: 0.9rem;
     padding-top: 0.25rem;
 }
 
-.cricket-home-team-score,
-.cricket-away-team-score,
-.cricket-home-team-overs,
-.cricket-away-team-overs {
-    /* display: inline-flex;
-    gap: 0.5rem;                  
-    align-items: baseline; */
-    display: contents;
-}
-
-.cricket-home-team-score span,
-.cricket-away-team-score span,
-.cricket-home-team-overs span,
-.cricket-away-team-overs span {
-    text-align: center;
-    min-width: max-content;
-}
 
 .cricket-home-team-logo,
 .cricket-away-team-logo {
